fixed paragraph spacing

--- a/style.css
+++ b/style.css
@@ -602,7 +602,7 @@ footer nav a {
     align-items: center;
 }
 
-.permanentka h3, permanentka p {
+.permanentka h3, .permanentka p {
     margin: 0;
 }
 
